# localex

./: .gitignore  Cargo.toml  README.md
crates/localex-cli/: Cargo.toml
crates/localex-cli/src/: backlinks.rs  config.rs  db.rs  highlights.rs  http.rs  lib.rs  main.rs  markdown.rs  themes.rs  watcher.rs
crates/localex-cli/tests/: api_routes.rs  smoke.rs
docs/: PRD.md
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
web/src/components/: BacklinksPanel.tsx  HighlightLayer.test.tsx  HighlightLayer.tsx  NotePanel.tsx
web/src/lib/: api.ts  katex-render.ts  types.ts
web/src/test/: setup.ts
