[package]
name = "localex-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-first reading shell for Markdown workspaces."

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
comrak = { version = "0.36", features = ["syntect"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
notify = "6"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
